2011-00-13 Caolán McNamara <caolanm at LibO>:
	* moz#694002 crash in hunspell affixmgr on exit with bad .aff
	* leak in hunspell affixmgr with bad .aff

2011-09-19 Caolán McNamara <caolanm at LibO>:
	* make libparsers.a not installed thanks to Tomáš Chvátal

2011-06-23 Caolán McNamara <caolanm at LibO>:
	* fix some windows compiler warnings

2011-05-24 Németh László <nemeth at numbertext dot org>:
        * src/hunspell/affixmgr.*: allow twofold suffixes in compounds
          by extended version of Arno Teigseth's patch, see hun#3288562.
        - new option for this feature: COMPOUNDMORESUFFIXES

2011-02-16 Németh László <nemeth at numbertext dot org>:
        * src/*/Makefile.am: fix library versioning, the probem reported by
          Rene Engerhald and Simon Brouwer.

	* man/hunspell.4: new version based on the revised version of Ruud Baars

2011-02-02 Németh László <nemeth at OOo>:
	* suggestngr.cxx: fix ngram PHONE suggestion for input words with
	  diacritics using UTF-8 encoded dictionaries (add byte length to the
	  8-bit phonet() argument instead of character length)

	* suggestmgr.cxx: fix missing csconv problem with UTF-8 encoding
	  dictionares, when the input contains non-BMP characters
	- tests/utf8_nonbmp.sug: test file

	* suggestmgr.cxx: mixed and keyboard based character suggestions
	  don't forbid ngram suggestion search (optimized tests/suggestiontest)

	* affixmgr.cxx: fix hun#2999225: interfering compounding mechanisms,
	  tested on Dutch word list and reported by Ruud Baars

	* affixmgr.cxx: allomorph fix for hun#2970240 (Hungarian 
	  compound "vadász+gép" was analyzed as vad+ász+gép, and rejected
	  by the ss->s rep rule (verb "vadássz"), but the analysis
	  didn't continue for the longer word parts (vadász+gép).

	* csutil.cxx: add lang code "az_AZ", "hu_HU", "tr_TR" for back
	  compatibility (fixing Azeri and Turkish casing conversion, also
	  Hungarian compound handling)

	* affixmgr.cxx: fix morphological analysis
